--- a/PS3/.gitignore
+++ b/PS3/.gitignore
@@ -1,2 +1,21 @@
 /bin/
 /target/
+/bin/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/bin/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
